--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/googlemaps": "^3.43.3",
     "@types/lodash": "^4.14.192",
     "clean-webpack-plugin": "^4.0.0",
     "lite-server": "^2.6.1",
@@ -21,6 +22,7 @@
     "webpack-dev-server": "^4.13.1"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "class-transformer": "0.3.1",
     "class-validator": "^0.14.0",
     "lodash": "^4.17.21",
